# osmosis-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  RELEASE.md
.github/workflows/: schedule-check-and-dispatch.yaml  schedule-check.yaml  schedule-rebuild-main.yaml  update-and-rebuild.yaml  update-version.yaml
cosmrs/: Cargo.toml
examples/cosmwasm/: README.md
examples/cosmwasm/.beaker/: state.local.json
examples/cosmwasm/contracts/osmosis-stargate/: Cargo.toml
examples/cosmwasm/contracts/osmosis-stargate/examples/: schema.rs
examples/cosmwasm/contracts/osmosis-stargate/schema/: execute_msg.json  query_creator_denoms_response.json
examples/cosmwasm/contracts/osmosis-stargate/src/: contract.rs  msg.rs
examples/cosmwasm/tests/: integration.test.js  package.json
examples/cosmwasm/ts/sdk/src/contracts/: OsmosisStargateContract.ts
examples/cosmwasm/ts/sdk/types/contracts/: OsmosisStargateContract.d.ts  OsmosisStargateContract.d.ts.map
scripts/: check-updates.sh  testpush.sh  update-and-rebuild.sh
scripts/update-osmosis-testing-replace/: go.mod  go.sum
tests/osmosis-std-cosmwasm-test/: Cargo.toml
tests/osmosis-std-cosmwasm-test/src/: contract.rs  msg.rs  state.rs
tests/osmosis-std-cosmwasm-test/tests/: helpers.rs  integration_test.rs
workflow-state/: LATEST_OSMOSIS_TAG_TIMESTAMP
